--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -3,17 +3,21 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": false,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "module": "ESNext",
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
+    "strictFunctionTypes": false,
+    "strictBindCallApply": false,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
     "jsx": "react-jsx"
   },
   "include": ["src"],
