--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && node dist/server.js",
+    "start": "npx prisma migrate deploy && npx prisma db seed && node ./dist/server.js",
     "dev": "npx prisma migrate dev && npx prisma db seed && nodemon src/server.ts"
   },
   "prisma": {
