--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "npx prisma generate && npx prisma migrate dev && npx prisma db seed && node dist/server.js",
+    "start": "npx prisma generate && npx prisma migrate deploy && npx prisma db seed && node dist/server.js",
     "dev": "npx prisma migrate dev && npx prisma db seed && nodemon src/server.ts"
   },
   "prisma": {
@@ -32,3 +32,4 @@
     "typescript": "^5.6.3"
   }
 }
+
